<resources>
    <string name="app_name">Panqa PUCP</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_historial">Historial</string>
    <string name="title_pendientes">Pendientes</string>
    <string name="title_recomendados">Recomendados</string>
    <string name="title_busqueda">Búsqueda</string>
    <string name="title_perfil">Mi Perfil</string>
    <string name="btnIniciarSesion">Iniciar Sesión</string>
    <string name="btnEscribeResenia">Escribe tu reseña</string>
    <string name="imgbook">imgbook</string>
    <string name="txtDescripcion">Descripción:</string>
    <string name="txtReseñas">Reseñas:</string>
    <string name="txtCategoria">Categoría:</string>
    <string name="txtAutor">Autor:</string>
    <string name="txtTitulo">Título:</string>
    <string name="txtDefault">null</string>
    <string name="txtBuscar">Escribe título, autor o categoría:</string>
    <string name="btnBuscar">BUSCAR</string>
    <string name="txtNombreUsuario">Nombre de usuario</string>
    <string name="txtContrasenia">Contraseña</string>
    <string name="txtIniciarSesion">¡Bienvenido a Panqa PUCP!</string>
    <string name="txtErrorLogin">Usuario o contraseña incorrecta</string>
    <string name="btnCerrarSesion">Cerrar Sesión</string>
    <string name="txtNoResults">No se encontraron resultados para la búsqueda.</string>
    <string name="txtNoHistory">Aún no tienes libros visitados.</string>
</resources>
