<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_historial"
        android:name="pe.edu.pucp.proyecto.ui.historial.HistorialFragment"
        android:label="@string/title_historial"
        tools:layout="@layout/fragment_historial" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="pe.edu.pucp.proyecto.ui.pendientes.PendientesFragment"
        android:label="@string/title_pendientes"
        tools:layout="@layout/fragment_pendientes" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="pe.edu.pucp.proyecto.ui.recomendados.RecomendadosFragment"
        android:label="@string/title_recomendados"
        tools:layout="@layout/fragment_recomendados" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="pe.edu.pucp.proyecto.ui.busqueda.BusquedaFragment"
        android:label="@string/title_busqueda"
        tools:layout="@layout/fragment_busqueda" />
</navigation>